<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/kok"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/kok"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fuqaroning_ma_lumotlarini_qo_shish"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/fuqaroning_ismi"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/fuqaroning_familiyasi"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_ota_ismi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/otasining_ismi"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_viloyatlar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:entries="@array/viloyatlar"
            android:scrollIndicators="right"
            android:textAlignment="center" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_shahar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/shahar_tuman"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_uy_manzili"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/uyining_manzili"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_pasport_olgan_vaqti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/pasport_olgan_vaqti"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_passport_muddati"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:hint="@string/pasport_muddati"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_jinsi"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:entries="@array/jins"
            android:scrollIndicators="right"
            android:textAlignment="center" />

    </LinearLayout>


    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_image_search_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fuqaroning_rasmi_3x4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/kok"
        android:text="@string/saqlash"
        android:textAllCaps="false" />


</LinearLayout>