<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/kok"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/kok"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

        <TextView
            android:id="@+id/txt_info_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/image"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/passport" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_ism"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuqaroning_ismi"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_familiya"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuqaroning_familiyasi" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_ota_ismi"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ma'lumotlar"
        />

    <TextView
        android:id="@+id/viloyat"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Viloyat"
        />
    <TextView
        android:id="@+id/shahar"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Shahar"
        />

    <TextView
        android:id="@+id/uy"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Uy"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:id="@+id/txt_pasport_olgan_vaqti"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="olingan_vaqt"
        />

    <TextView
        android:id="@+id/txt_passport_muddati"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Muddati"
        />

    <TextView
        android:id="@+id/jinsi"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jinsi"
        android:textStyle="bold"
        />




</LinearLayout>